Update swagger host
